syntax = "proto3";


option csharp_namespace = "REPF.Grpc";

package forecast;

// The greeting service definition.
service Forecaster {
  // Sends a greeting
  rpc Forecast (ForecastRequest) returns (ForecastResponse);
}

// The request message containing the user's name.
message ForecastRequest {
  int32 m2 = 1;
  string heatingType = 2;
  int32 elevator = 3;
  double price = 4;
  double roomCount = 5;
  string placeTitle = 6;
}

// The response message containing the greetings.
message ForecastResponse {
  double price = 1;
}
